# data-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .flake8  Dockerfile  README.md  alembic.ini  db.sqlite3  docker-compose.yml  pyproject.toml
backend/analyzer/: __init__.py  __main__.py  conftest.py  settings.py
backend/analyzer/api/: __init__.py  application.py  exceptions_handlers.py  lifetime.py  routers.py
backend/analyzer/api/controllers/: __init__.py  analyzer.py
backend/analyzer/api/dependencies/: __init__.py  models.py  services.py
backend/analyzer/db/: __init__.py  database.py  repository.py
backend/analyzer/db/mappings/: File.py  __init__.py  base.py
backend/analyzer/db/migrations/: env.py
backend/analyzer/db/migrations/versions/: 39312dc14a45_add_file_table.py
backend/analyzer/db/repositories/: __init__.py  base.py  file.py
backend/analyzer/services/: __init__.py  analyzer.py  base.py
backend/analyzer/services/exceptions/: __init__.py  exceptions.py
backend/analyzer/services/models/: __init__.py  analyzer.py  base.py
backend/analyzer/tests/: __init__.py
backend/analyzer/tests/use_cases/: test_analyzer.py
backend/deploy/: docker-compose.dev.yml  docker-compose.yml
backend/deploy/docker/dynamodb/: shared-local-instance.db
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  config.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: FileUpload.vue  ListItem.vue
frontend/src/services/: index.ts  interfaces.ts
frontend/src/stores/: list.ts  selected.ts
frontend/src/types/: global.d.ts
frontend/src/views/: ChartView.vue  ListView.vue
