[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Guilherme <guibarasuol99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.26.0"
pydantic-settings = {extras = ["dotenv"], version = "^2.1.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-multipart = "^0.0.6"
ujson = "^5.9.0"
pandas = "^2.2.0"
python-dateutil = "^2.8.2"
importlib-metadata = "^7.0.1"

[tool.poetry.dev-dependencies]
black = { extras = ["d"], version = "^22.12.0" }
pytest = "^7.4.4"
autoflake = "^1.6.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
extend-exclude = "db/migrations"

[tool.isort]
profile = "black"
extend_skip = ["db", "migrations"]
src_paths = ["analyzer", "tests"]
combine_as_imports = true

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = ["analyzer/db/migrations"]
